; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/graph/extr_ctxnve0.c_nve0_graph_generate_tpc.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/graph/extr_ctxnve0.c_nve0_graph_generate_tpc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvc0_graph_priv = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvc0_graph_priv*)* @nve0_graph_generate_tpc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @nve0_graph_generate_tpc(%struct.nvc0_graph_priv* %0) #0 {
  %2 = alloca %struct.nvc0_graph_priv*, align 8
  store %struct.nvc0_graph_priv* %0, %struct.nvc0_graph_priv** %2, align 8
  %3 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %4 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %3, i32 4298824, i32 0)
  %5 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %6 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %5, i32 4298852, i32 297)
  %7 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %8 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %7, i32 4298888, i32 0)
  %9 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %10 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %9, i32 4299264, i32 240)
  %11 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %12 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %11, i32 4299268, i32 1)
  %13 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %14 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %13, i32 4299272, i32 33)
  %15 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %16 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %15, i32 4299276, i32 131072)
  %17 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %18 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %17, i32 4299280, i32 0)
  %19 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %20 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %19, i32 4299284, i32 512)
  %21 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %22 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %21, i32 4299292, i32 49152)
  %23 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %24 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %23, i32 4299296, i32 2048)
  %25 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %26 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %25, i32 4299312, i32 1)
  %27 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %28 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %27, i32 4299460, i32 3667008)
  %29 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %30 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %29, i32 4299776, i32 10)
  %31 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %32 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %31, i32 4299780, i32 -2147483642)
  %33 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %34 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %33, i32 4299784, i32 2)
  %35 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %36 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %35, i32 4299808, i32 0)
  %37 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %38 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %37, i32 4299812, i32 541200)
  %39 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %40 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %39, i32 4299816, i32 1056698302)
  %41 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %42 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %41, i32 4300008, i32 0)
  %43 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %44 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %43, i32 4300020, i32 12803)
  %45 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %46 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %45, i32 4300292, i32 0)
  %47 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %48 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %47, i32 4300296, i32 0)
  %49 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %50 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %49, i32 4300300, i32 0)
  %51 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %52 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %51, i32 4300304, i32 1026)
  %53 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %54 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %53, i32 4300356, i32 1306610)
  %55 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %56 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %55, i32 4300360, i32 0)
  %57 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %58 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %57, i32 4300364, i32 127)
  %59 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %60 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %59, i32 4300368, i32 0)
  %61 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %62 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %61, i32 4300372, i32 0)
  %63 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %64 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %63, i32 4300376, i32 0)
  %65 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %66 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %65, i32 4300380, i32 0)
  %67 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %68 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %67, i32 4300384, i32 0)
  %69 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %70 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %69, i32 4300388, i32 0)
  %71 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %72 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %71, i32 4300392, i32 0)
  %73 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %74 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %73, i32 4300396, i32 0)
  %75 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %76 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %75, i32 4300400, i32 0)
  %77 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %78 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %77, i32 4300404, i32 0)
  %79 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %80 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %79, i32 4300408, i32 0)
  %81 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %82 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %81, i32 4300412, i32 0)
  %83 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %84 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %83, i32 4300416, i32 0)
  %85 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %86 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %85, i32 4300420, i32 0)
  %87 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %88 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %87, i32 4300424, i32 0)
  %89 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %90 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %89, i32 4300428, i32 0)
  %91 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %92 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %91, i32 4300432, i32 0)
  %93 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %94 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %93, i32 4300436, i32 0)
  %95 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %96 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %95, i32 4300440, i32 0)
  %97 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %98 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %97, i32 4300460, i32 8143)
  %99 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %100 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %99, i32 4300464, i32 3391)
  %101 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %102 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %101, i32 4300488, i32 77903)
  %103 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %104 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %103, i32 4300592, i32 0)
  %105 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %106 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %105, i32 4300596, i32 0)
  %107 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %108 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %107, i32 4300600, i32 0)
  %109 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %110 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %109, i32 4300604, i32 0)
  %111 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %112 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %111, i32 4300608, i32 0)
  %113 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %114 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %113, i32 4300612, i32 0)
  %115 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %116 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %115, i32 4300616, i32 0)
  %117 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %118 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %117, i32 4300620, i32 0)
  %119 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %120 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %119, i32 4300632, i32 0)
  %121 = load %struct.nvc0_graph_priv*, %struct.nvc0_graph_priv** %2, align 8
  %122 = call i32 @nv_wr32(%struct.nvc0_graph_priv* %121, i32 4300664, i32 11)
  ret void
}

declare dso_local i32 @nv_wr32(%struct.nvc0_graph_priv*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
